src/test/deca/context/valid/oracle/this.deca
class A {
    int a = 0;
    int b = 0;
    void method(int c){
        this.a + this.b;
    }
    void method2(int c){
        this.method(1);
        this.a;
    }
}