src/test/deca/context/invalid/with-object/binary_op_eq_with_one_class_r.deca
class A{
    int x;
}

{
    A a = new A();
    true == a;
}